@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
                       "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY % global_entities SYSTEM "global.ent">
 %global_entities;
@@ -1336,7 +1336,7 @@
             <title id="dump_xds.title">Dump a Display Spec</title>
             <para>text</para>
         </sect1>
-    </chapter> &doctype_supp; &xds_ele_ref; &xds_dtd_def; <glossary role="auto">
+    </chapter> &faq; &doctype_supp; &xds_ele_ref; &xds_dtd_def; <glossary role="auto">
         <glossentry>
             <glossterm>Dummy</glossterm>
             <glossdef>
